flaskapp.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: flaskapplinux
spec:
  # strategy:
  #   type: Recreate
  selector:
    matchLabels:
      app: flaskapplinux
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: flaskapplinux
    spec:
      containers:
      - name: flaskapplinux
        image: udgtgmay2gwjiacr.azurecr.io/flaskapp:1.0
        ports:
        - containerPort: 5000
      nodeSelector:
        pool: linux
