flaskservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: flasklinuxservice
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapplinux
  type: LoadBalancer
