internal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-linux-app
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000  
  selector:
    app: flaskapplinux
