ingress-flaskapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskingress
  namespace: default
  annotations:
    kubernetes.io/ingress.regional-static-ip-name:   10.224.0.42
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.cdlapp.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: flasklinuxservice
                port:
                  number: 5000
            path: /
